fix(tm-view): Fix some spacing and floating

--- a/tablemanager-view/src/app/table-list/tt-table/match-item/match-item.component.scss
+++ b/tablemanager-view/src/app/table-list/tt-table/match-item/match-item.component.scss
@@ -1,4 +1,1 @@
-.call-color {
-  color: #f44336;
-  font-weight: bold;
-}
+
